# voice-driven-code

./: README.md
s2c/: README.md  pyproject.toml  requirements.txt
s2c/src/s2c/: __init__.py  _sandbox_entry.py  app.py  asr.py  asr_edit.py  asr_whisper.py  codegen.py  edit.py  eval_wers.py  eval_wers_old.py  harness.py  hotwords.py  intent.py  metrics.py  sample_word_count.py  tui.py  user_solution.py  verify.py
s2c/src/s2c/edits/: apply_ast.py  grammar.py  types.py
s2c/src/s2c_mvp.egg-info/: PKG-INFO  SOURCES.txt
s2c/tests/: test_word_count.py
s2c/tests/asr/: test_confidence_gate.py  test_decode_severity.py  test_hotwords.py  test_intent_fusion.py
s2c/tests/edits/: test_ast_engine.py  test_edit_grammar.py
s2c/tests/tasks/: test_is_palindrome.py  test_reverse_string.py  test_word_count_gen.py
